# ironoxide

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  RELEASING.md  build.rs  flake.nix  perf_thoughts.md  rust-toolchain.toml  uniffi-bindgen-go.rs  uniffi.toml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  daily.yaml  release.yaml  security-audit.yaml  test.yaml
.travis_scripts/: cross-test.sh
benches/: ironoxide_bench.rs
benches/data/: dev-device1.json.iron  prod-device1.json.iron  stage-device1.json.iron
examples/: decrypting.rs  enc-search-sample.rs  encrypting.rs  example-ironoxide-device.json  example-ironoxide-user.json
go/ironoxide/: README.md  integration_test.go  ironoxide_test.go
ironoxide_macros/: Cargo.toml
ironoxide_macros/src/: lib.rs
proto/: Foo.proto  edeks.proto  transform.proto
src/: binding.rs  blind_index.rs  blocking.rs  document.rs  group.rs  internal.rs  lib.rs  macros.rs  main.rs  policy.rs  prelude.rs  search.rs  uniffi_types.rs  user.rs
src/blocking/: mod.rs  prelude.rs
src/crypto/: aes.rs  mod.rs  streaming.rs  transform.rs
src/document/: advanced.rs  file.rs  mod.rs  unmanaged.rs
src/internal/: document_api.rs  group_api.rs  mod.rs  rest.rs  serde_rfc3339.rs  user_api.rs
src/internal/document_api/: file_ops.rs  mod.rs  requests.rs
src/internal/group_api/: mod.rs  requests.rs
src/internal/user_api/: mod.rs  requests.rs
src/proto/: Foo.rs  edeks.rs  mod.rs  transform.rs
tests/: INTEGRATION-TESTS.md  blocking_ops.rs  common.rs  document_ops.rs  file_ops.rs  group_ops.rs  search_ops.rs  user_ops.rs
tests/common/: mod.rs
tests/testkeys/: iak-dev.pem.enc  iak-dev.pem.iron  iak-prod.pem.iron  iak-stage.pem.iron  ironcore-config-dev.json  ironcore-config-prod.json  ironcore-config-stage.json  rsa_keygen.md  rsa_private.json  rsa_private.pem.enc  rsa_private.pem.iron
