[package]
name = "ironoxide"
version = "4.0.1"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/IronCoreLabs/ironoxide"
documentation = "https://docs.rs/ironoxide"
categories = ["cryptography"]
keywords = [
    "cryptography",
    "proxy-re-encryption",
    "PRE",
    "ECC",
    "transform-encryption",
]
description = "A pure-Rust SDK for accessing IronCore's privacy platform"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
base64 = "0.22"
base64-serde = "0.8"
bytes = "1"
futures = "0.3.1"
hex = "0.4"
ironcore-search-helpers = { version = "0.2", optional = true }
itertools = "0.14"
jsonwebtoken = "9"
lazy_static = "1.4"
log = "0.4"
papaya = "0.1.8"
percent-encoding = "2.1"
protobuf = { version = "3.0", features = ["with-bytes"] }
quick-error = "2"
rand = "0.8"
rand_chacha = "0.3"
recrypt = "0.14"
regex = "1.4"
reqwest = { version = "0.12", features = ["json"], default-features = false }
ring = { version = "0.17", features = ["std"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.6", features = [
    "std",
    "serde-human-readable",
    "serde-well-known",
    "parsing",
] }
tokio = { version = "1", features = ["time"] }
url = "2.2"
vec1 = "1.6"

[dev-dependencies]
anyhow = "1"
criterion = "0.5"
double = "0.2.4"
galvanic-assert = "0.8"
mut_static = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"], default-features = false }

[build-dependencies]
itertools = "0.14"
protobuf-codegen = "3.0"

[features]
beta = ["ironcore-search-helpers"]
blocking = []

# NOTE: ironoxide requires a TLS implementation. Choose one of the following
# enable to use statically compiled openssl on supported OpenSSL platforms; use with 'default-features = false'
tls-vendored-openssl = ["reqwest/native-tls-vendored"]
# enable to use rustls-tls; use with 'default-features = false'
tls-rustls = ["reqwest/rustls-tls"]
# dynamically use the target platform's native TLS
tls-default = ["reqwest/default-tls"]

default = ["tls-default", "tokio/rt-multi-thread"]

[profile.dev]
opt-level = 2
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true

[[example]]
name = "enc-search-sample"
required-features = ["beta"]

[[example]]
name = "encrypting"

[[example]]
name = "decrypting"

[[bench]]
name = "ironoxide_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
